Ajout de la maquette dans le rapport

--- a/rapport_20_novembre/rapport_2.tex
+++ b/rapport_20_novembre/rapport_2.tex
@@ -153,7 +153,18 @@ One of the goals of this project is the creation of a web interface for managing
 \item{Start, stop or restart the data-diode}
 \item{Purge the \textit{download directory}}
 \item{Set or modify the maximum size of the \textit{download directory}}
-\end{itemize} 
+\end{itemize}
+
+\subsubsection{Mockups}
+\begin{center}
+\begin{tabular}{cc}
+\includegraphics[scale=0.5]{img/Login.png} & \includegraphics[scale=0.5]{img/menu.png}\\
+\includegraphics[scale=0.45]{img/ftp.png} & \includegraphics[scale=0.5]{img/linkudp.png}\\
+\includegraphics[scale=0.5]{img/switch.png} & \\
+
+
+\end{tabular}
+\end{center} 
 
 
 
